# hustle-in-Rust-now-defunct

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Cargo.toml  Makefile  README.md  developer_resources.md  init.sh  meeting_minutes.md  run_simple_query.sh  sqlite_import.sh  tatp_queries.sql  test.sh
catalog/: .gitignore  CMakeLists.txt  Cargo.toml
catalog/cpp_example/: example.cpp  libcatalog.d  makefile
catalog/src/: lib.rs
catalog/src/entities/: block.rs  column.rs  database.rs  datatype.rs  mod.rs  relation.rs  statistic.rs
catalog/src/helpers/: api.rs  mod.rs  string_helper.rs
catalog/tests/: integration_tests.rs
execution/: .gitignore  CMakeLists.txt  Cargo.toml  Makefile  README.md
execution/scripts/: sqlite_import.sh
execution/src/: engine.rs  expression.rs  lib.rs  libexecution.a.out  logical_operator.rs  main.rs  router.rs  state.rs  storage_util.rs
execution/src/logical_entities/: column.rs  mod.rs  predicate.rs  relation.rs  row.rs  schema.rs  value.rs
execution/src/operator/: begin_transaction.rs  cartesian.rs  collect.rs  commit_transaction.rs  create_table.rs  delete.rs  drop_table.rs  hash_join.rs  insert.rs  join.rs  mod.rs  nested_loop_join.rs  project.rs  select.rs  table_reference.rs  update.rs  util.rs
execution/src/physical_operators/: aggregate.rs  create_table.rs  delete.rs  drop_table.rs  export_csv.rs  import_csv.rs  insert.rs  join.rs  limit.rs  mod.rs  print.rs  project.rs  random_relation.rs  select.rs  select_output.rs  select_sum.rs  table_reference.rs  test_relation.rs  update.rs
execution/src/physical_plan/: global_sm.rs  mod.rs  node.rs  parser.rs
execution/src/predicate/: comparison.rs  conjunction.rs  disjunction.rs  mod.rs
execution/src/relational_api/: c_api.rs  mod.rs  python_api.py  rust_api.rs  sample.py
execution/src/storage_manager/: mod.rs
execution/src/test_helpers/: data_gen.rs  generate_data.rs  hustle_queries.rs  mod.rs  select_sum.rs  sqlite3.rs  sum_column.rs
execution/src/type_system/: borrowed_buffer.rs  byte_string.rs  data_type.rs  float.rs  integer.rs  ip_address.rs  mod.rs  operators.rs  owned_buffer.rs  type_id.rs  utf8_string.rs
execution/src/types/: borrowed_buffer.rs  float.rs  integer.rs  ip_address.rs  mod.rs  owned_buffer.rs  utf8_string.rs
execution/test-data/: T.hsl  data.csv  sqlite.data
execution/tests/: count_test.rs  double_join_test.rs  execution_engine_tests.rs  grouping_test.rs  integration_test.rs  limit_test.rs  max_test.rs  min_test.rs  parser_test.rs  project_test.rs  sum_test.rs  update_test.rs
execution/util/: Cargo.toml
execution/util/src/: lib.rs
optimizer/: .gitignore  CMakeLists.txt  Cargo.toml  Makefile  build.rs  example.cpp  example.h  example.hpp  example_output  optimizer_catalog_schema.txt  optimizer_output.txt  optimizer_wrapper.cpp  optimizer_wrapper.h  optimizer_wrapper.hpp
optimizer/lib/: CMakeLists.txt  test_to_fix
optimizer/lib/quickstep/: .gitignore  CTestTestfile.cmake  Makefile  cmake_install.cmake
optimizer/quickstep/: CMakeLists.txt  README.md
optimizer/quickstep/catalog/: CMakeLists.txt
optimizer/quickstep/cli/: CMakeLists.txt  CliConfig.h.in
optimizer/quickstep/cmake/: QsProtobufGenerateCpp.cmake
optimizer/quickstep/query_execution/: CMakeLists.txt
optimizer/quickstep/query_optimizer/: CMakeLists.txt  HustleOptimizer.cpp  HustleOptimizer.hpp  LogicalGenerator.cpp  LogicalGenerator.hpp  Optimizer.cpp  Optimizer.hpp  optmain.cpp
optimizer/quickstep/relational_operators/: CMakeLists.txt
optimizer/quickstep/storage/: SplitRowStoreTupleStorageSubBlock.cpp
optimizer/quickstep/transaction/: CMakeLists.txt
optimizer/quickstep/types/: CMakeLists.txt
optimizer/quickstep/utility/: CMakeLists.txt  TreeStringSerializable.hpp
optimizer/resolver/: CMakeLists.txt  resolver.cpp  resolver.h
optimizer/src/: execution_generator.rs  lib.rs  physical_generator.rs
optimizer/src/rules/: eliminate_join.rs  fuse_operators.rs  mod.rs  rewrite_predicate.rs  set_evaluation_order.rs
parser/: .gitignore  AttributeNode.cpp  AttributeNode.h  CMakeLists.txt  Cargo.toml  CreateTableNode.cpp  CreateTableNode.h  FunctionNode.cpp  FunctionNode.h  JoinNode.cpp  JoinNode.h  Makefile  OperatorNode.cpp  OperatorNode.h  ParseNode.cpp  ParseNode.h  ParserDriver.cpp  ParserDriver.h  ReferenceNode.cpp  ReferenceNode.h  SelectNode.cpp  SelectNode.h  build.rs  dynamic_array.h  lexer.c  lexer.cpp  lexer.l  linked_list.c  linked_list.h  location.hh  main.c  parse_node.c  parse_node.h  parser.c  parser.cpp  parser.y  parser_wrapper.c  parser_wrapper.h  string_builder.c  string_builder.h  (+2 more)
parser/example/: lexer.l  main.c  makefile  parser.y  statement.c  statement.h
parser/example_output/: select.txt
parser/parser/: .gitignore  CMakeLists.txt  lexer.l  parse_context.c  parse_context.h  parse_node.c  parse_node.h  parser.y  parser_wrapper.c  parser_wrapper.h
parser/parser/util/: dynamic_array.c  (+5 more)
parser/src/: lib.rs
parser/test/: CMakeLists.txt  create.cpp  parser_test.c  parser_test.cpp  select.cpp
parser/tests/: tests.rs
parser/utility/: dynamic_array.c  stringify.c  stringify.h
resolver_new/: Cargo.toml
resolver_new/src/: lib.rs  resolver.rs
resolver_new/tests/: resolver_tests.rs
scheduler/: Cargo.toml
scheduler/src/: collect.rs  lib.rs  router.rs  worker.rs
server/: Cargo.toml
server/src/: connection.rs  lib.rs  main.rs  message.rs  parser.rs  server.rs
storage/: CMakeLists.txt  Cargo.toml  key$0.hsl  key_get_row_col.hsl  t.0.hsl
storage/benches/: buffer_benchmarks.rs  storage_manager_benchmarks.rs
storage/src/: block.rs  buffer.rs  buffer_manager.rs  key_value_storage_engine.rs  lib.rs  log_manager.rs  lru_buffer.rs  physical_relation.rs  record_guard.rs  relational_block.rs  relational_storage_engine.rs  storage_manager.rs
storage/tests/: bitmap_tests.rs  block_tests.rs  buffer_tests.rs  lru_buffer_test.rs  storage_manager_tests.rs
transaction/: Cargo.toml
transaction/src/: domain.rs  lib.rs  manager.rs  statement.rs  transaction.rs
transaction/tests/: statement_tests.rs
transaction/util/: Cargo.toml
(+354 files in other folders)
