[package]
name = "hustle-execution"
version = "0.1.0"
authors = ["Robert Claus <robertclaus@gmail.com>"]

[dependencies]
hustle-common = { path = "../common" }
hustle-types = { path = "../types" }
hustle-storage = { path = "../storage" }
hustle-profiler = { path = "../profiler" }
rand = "0.5.5"
memmap = "0.6.2"
sqlite = "0.23.9"
csv = "1"
serde_json = "1.0"
byteorder = "1.3.1"
