[package]
name = "hustle-execution"
version = "0.1.0"
authors = ["gaffneyk <kgaff33@gmail.com>"]
edition = "2018"

[dependencies]
hustle-catalog = { path = "../catalog" }
hustle-common = { path = "../common" }
hustle-storage = { path = "../storage" }
hustle-types = { path = "../types" }
bit-vec = "0.6"
downcast-rs = "1.0.4"
itertools = "0.8.0"

[dev-dependencies]
hustle-execution-test-util = { path = "util" }
