[package]
name = "hustle-resolver-new"
version = "0.1.0"
authors = ["lichengxihuang"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hustle-common = { path = "../common" }
hustle-resolver = { path = "../resolver" }
#serde = { version = "1.0.92", features = ["derive"] }
serde_json = "1.0"
sqlparser = "0.4.0"
