[package]
name = "server"
version = "0.1.0"
authors = ["gaffneyk <kgaff33@gmail.com>"]
edition = "2018"

[dependencies]
hustle-parser = { path = "../parser" }
resolver = { path = "../resolver" }
transaction = { path = "../transaction" }
execution = { path = "../execution" }
message = { path = "../message" }
types = { path = "../types" }
profiler = { path = "../profiler" }
crossbeam-utils = "0.6.5"
byteorder = "1.3.1"
serde = { version = "1.0.92", features = ["derive"] }
serde_json = "1.0.39"
