[package]
name = "hustle-server"
version = "0.1.0"
authors = ["gaffneyk <kgaff33@gmail.com>"]
edition = "2018"

[dependencies]
hustle-parser = { path = "../parser" }
hustle-resolver = { path = "../resolver" }
hustle-transaction = { path = "../transaction" }
hustle-execution = { path = "../execution" }
hustle-common = { path = "../common" }
hustle-types = { path = "../types" }
hustle-profiler = { path = "../profiler" }
crossbeam-utils = "0.6.5"
byteorder = "1.3.1"
serde = { version = "1.0.92", features = ["derive"] }
serde_json = "1.0.39"
