[package]
name = "hustle-storage"
version = "0.1.0"
authors = ["gaffneyk <kpgaffney@wisc.edu>"]

[dependencies]
byteorder = "1.3.2"
memmap = "0.7.0"
omap = { git = "https://github.com/UWHustle/omap" }

[dev-dependencies]
criterion = "0.2"
rand = "0.6.5"

[[bench]]
name = "storage_manager_benchmarks"
harness = false
