[package]
name = "hustle-storage"
version = "0.1.0"
authors = ["gaffneyk <kpgaffney@wisc.edu>"]

[dependencies]
hustle-types = { path = "../types" }
omap = { git = "https://github.com/UWHustle/omap" }
bit-vec = "0.6"
byteorder = "1.3.2"
memmap = "0.7.0"
uuid = { version = "0.7", features = ["v4"] }

[dev-dependencies]
lazy_static = "1.3.0"
