[package]
name = "hustle-transaction"
version = "0.1.0"
authors = ["gaffneyk <kgaff33@gmail.com>"]
edition = "2018"

[dependencies]
hustle-common = { path = "../common" }
hustle-catalog = { path = "../catalog" }
hustle-types = { path = "../types" }
crossbeam = "0.7.1"

[dev-dependencies]
hustle-transaction-test-util = { path = "util" }
