[package]
name = "hustle-transaction-test-util"
version = "0.1.0"
authors = ["gaffneyk <kgaff33@gmail.com>"]
edition = "2018"

[dependencies]
hustle-common = { path = "../../common" }
hustle-catalog = { path = "../../catalog" }
hustle-resolver = { path = "../../resolver" }
hustle-types = { path = "../../types" }
sqlparser = "0.4.0"
